fix(data-analysis): use plain Thread for CI JDK compatibility
CI runner JDK lacks virtual thread support. Use new Thread() instead.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>